<resources>

    <string name="app_name">Bridgewalker</string>
    <string name="menu_settings">Settings</string>
    <string name="activity_title">Bridgewalker</string>
    <string name="guest_login_button">Use guest mode</string>
    <string name="standard_login_button">Create account (coming eventually)</string>
    <string name="bridgewalker_logo">Bridgewalker logo</string>
    <string name="disclaimer">This software is beta and only a technology demo. Use at your own risk. No guarantees of any kind at this point.</string>
    <string name="old_version">This app appears to be too old to talk to the server. Please check if an update is available. Thank you!</string>
	<string name="send_tab_label">Send</string>
	<string name="receive_tab_label">Receive</string>
	<string name="usd_balance_zero">0 EUR</string>
	<string name="qrcode_desc">QRCode of Bitcoin address</string>
	<string name="copy_to_clipboard">Copy to clipboard</string>
	<string name="share">Share</string>
	<string name="copied_to_clipboard">Copied to clipboard</string>
	<string name="share_bitcoin_address">Share Bitcoin address</string>
	<string name="send_to">Send to:</string>
	<string name="scan">Scan</string>
	<string name="amount">Amount:</string>
	<string name="usd">EUR</string>
	<string name="btc">BTC</string>
	<string name="fees_on_top">Deduct fees separately</string>
	<string name="recipient_will_receive">Recipient will\nreceive:</string>
	<string name="deducted_from_your_account">Deducted from\nyour account:</string>
	<string name="send_payment">Send payment</string>
	<string name="quote_info_text">Info: Recipient will receive %1$s BTC (~ %2$s EUR). From your account %3$s EUR will be deducted. The difference is %4$s EUR or about +%5$.2f %%. Some amounts rounded here, but internal accounting uses full precision.</string>
	<string name="quote_info_text_internal">Info: Recipient will receive %1$s EUR (~ %2$s BTC). The same amount will be deducted from your account. This is an internal transfer and no fees apply.</string>
	<string name="quote_warning">Note that small transactions have a higher overhead because of fixed transaction fees.</string>
	<string name="send_payment_confirmation_text_based_on_btc">About to send %1$s BTC to %2$s.</string>
	<string name="send_payment_confirmation_text_based_on_btc_with_quote">About to send %1$s BTC (~ %2$s EUR) to %3$s.</string>
	<string name="send_payment_confirmation_text_based_on_usd_before_fees">About to send a payment worth %1$s EUR to %2$s.</string>
	<string name="send_payment_confirmation_text_based_on_usd_before_fees_with_quote">About to send a payment worth %1$s EUR (~ %2$s BTC) to %3$s.</string>
	<string name="send_payment_confirmation_text_based_on_usd_after_fees">About to use %1$s EUR for a payment to %2$s.</string>
	<string name="send_payment_confirmation_text_based_on_usd_after_fees_with_quote">About to use %1$s EUR for a payment (~ %2$s BTC) to %3$s.</string>
	<string name="send_payment_error">Sorry, something went wrong.</string>
	<string name="send_payment_success">Payment sent</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="insufficient_balance">Insufficient balance</string>
	<string name="quote_unavailable">Sorry, I was unable to get a quote.</string>
	<string name="balance">%1$s EUR</string>
	<string name="exchange_rate">(1 BTC ~ %1$.2f EUR)</string>
	<string name="waiting_for_exchange">+ %1$s BTC waiting to be exchanged.</string>
	<string name="waiting_for_confirmation">+ %1$s BTC waiting to be confirmed.</string>
	<string name="waiting_for_exchange_with_usd">+ %1$s BTC (~ %2$s EUR) waiting to be exchanged.</string>
	<string name="waiting_for_confirmation_with_usd">+ %1$s BTC (~ %2$s EUR) waiting to be confirmed.</string>
	<string name="exchange_unavailable">The server is currently experiencing communication problems with Mt.Gox. Sending payments will probably not work, sorry.</string>
	<string name="backup_guest_account">Backup</string>
	<string name="guest_backup_description">Below you can find the login credentials to your guest account. Please write them down somewhere safe to be protected in case your phone is lost or breaks.\n\nThis is a preliminary backup function while Bridgewalker is in beta and full accounts are not implemented yet. There is no automatic restore function yet. If you need to make use of your backup, please get in touch at jan@uos.de and I will restore your account.</string>
	<string name="show_credentials">Show credentials</string>
	<string name="hide_credentials">Hide credentials</string>
	<string name="copy_credentials">Copy credentials</string>
	<string name="guest_credentials">Login:\n%1$s\n\nPassword:\n%2$s\n\nLast displayed:\n%3$s</string>
	<string name="never">never</string>
	<string name="timespan_now">just now</string>
	<string name="timespan_seconds">seconds ago</string>
	<string name="timespan_minutes">more than a minute ago</string>
	<string name="timespan_hours">more than an hour ago</string>
	<string name="timespan_days">more than a day ago</string>
	<string name="shutdown_notice">The Bridgewalker service has been shut down. You can find more information on the Bridgewalker blog. Thanks for all your support!</string>
	<string name="submit_request">Submit request</string>
	<string name="shutdown_notice_inapp">Bridgewalker is shutting down. Please provide a Bitcoin address and submit a request to have your remaining funds sent to that address. Please allow for a few days of processing. Thank you for having been a beta tester!</string>
	<string name="request_submitted">Your request has been submitted. Thank you!</string>
</resources>
