<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
	tools:context=".LoginActivity" >

    <ImageView
        android:id="@+id/logo_imageview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/logo_large_white"
        android:contentDescription="@string/bridgewalker_logo" />
    
   	<TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/shutdown_notice" />

    <RelativeLayout
    	android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone" >
        
	    <LinearLayout
	        android:id="@+id/login_buttons_layout"
	        android:visibility="invisible"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:orientation="vertical" >
	
		    <Button
		        android:id="@+id/guest_login_button"
		        android:layout_width="match_parent"
		        android:layout_height="60dp"
		        android:text="@string/guest_login_button" />
		
		    <Button
		        android:id="@+id/standard_login_button"
		        android:layout_width="match_parent"
		        android:layout_height="60dp"
		        android:enabled="false"
		        android:text="@string/standard_login_button" />
	    </LinearLayout>
	    
	    <TextView
	        android:id="@+id/old_version_textview"
	        android:visibility="invisible"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_centerInParent="true"
	        android:textStyle="bold"
	        android:text="@string/old_version" />
	    
        <ProgressBar
	        android:id="@+id/login_progressbar"
	        style="?android:attr/progressBarStyleLarge"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerInParent="true"
	        android:visibility="invisible" />
	</RelativeLayout>
    
   	<TextView
	        android:id="@+id/disclaimer_textview"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="bottom"
	        android:text="@string/disclaimer"
	        android:visibility="gone" />
</LinearLayout>