<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >
	    
	    <ProgressBar
			android:id="@+id/send_fragment_progressbar"
		    style="?android:attr/progressBarStyleLarge"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_centerInParent="true"
		    />
	
		<LinearLayout 
		    xmlns:tools="http://schemas.android.com/tools"
		    android:id="@+id/send_fragment_content_linearlayout"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:padding="8dp"
		    android:orientation="vertical"
		    android:visibility="invisible" >
		
		    <TextView
		        android:id="@+id/send_fragment_usd_balance_textview"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/usd_balance_zero"
		        android:textAppearance="?android:attr/textAppearanceLarge"
		        android:gravity="center"
		        android:paddingTop="16dp"
		        android:paddingBottom="4dp"
		       	/>
		    
		    
		    <TextView
		        android:id="@+id/send_fragment_pending_events_textview"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:paddingBottom="8dp"
		        android:gravity="center"
		        android:visibility="gone"
		        android:text="" />
		    
		    <TableLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:stretchColumns="1"
		        android:paddingTop="8dp">
		        
		        <TableRow 
		            android:layout_width="match_parent"
		        	android:layout_height="wrap_content">

		           	<TextView 
			            android:layout_width="wrap_content"
			        	android:layout_height="wrap_content"
			        	android:layout_gravity="center_vertical"
			        	android:textAppearance="?android:attr/textAppearanceMedium"
			        	android:text="@string/send_to" />
		           	
		           	<LinearLayout
		           	    android:layout_width="match_parent"
		        		android:layout_height="wrap_content">
		           	    
		           	    <EditText 
		           	        android:id="@+id/recipient_address_edittext"
				            android:layout_width="0dp"
				            android:layout_height="wrap_content"
				            android:layout_weight="1"
				            android:inputType="text"
				            />		 
				            
			        	<Button 
			        	    android:id="@+id/scan_button"
				            android:layout_width="wrap_content"
				        	android:layout_height="match_parent"
				            android:text="@string/scan"
				            />
		        	</LinearLayout>
		        </TableRow>
		        
		        <TableRow 
		            android:layout_width="match_parent"
		        	android:layout_height="wrap_content">

		           	<TextView 
			            android:layout_width="wrap_content"
			        	android:layout_height="wrap_content"
			        	android:layout_gravity="center_vertical"
			        	android:textAppearance="?android:attr/textAppearanceMedium"
			        	android:text="@string/amount"
						/>
		        
		           	<LinearLayout
		           	    android:layout_width="match_parent"
		        		android:layout_height="wrap_content">
		           	
		           	
		           	    <EditText 
				            android:layout_width="0dp"
				            android:layout_height="wrap_content"
				            android:layout_weight="1"
				            android:inputType="numberDecimal"
				            />
		           	    
					    <RadioGroup
					        android:layout_width="wrap_content"
			        		android:layout_height="match_parent"
			        		android:orientation="horizontal" >
			 
					        <RadioButton
					            android:id="@+id/usd_radio_button"
					            android:layout_width="wrap_content"
					            android:layout_height="wrap_content"
					            android:text="@string/usd" 
					            android:checked="true"
					             />
					 
					        <RadioButton
					            android:id="@+id/btc_radio_button"
					            android:layout_width="wrap_content"
					            android:layout_height="wrap_content"
					            android:text="@string/btc" />
					    </RadioGroup>	           	
					</LinearLayout>    		 
		        </TableRow>
		        
		        <TableRow 
		            android:layout_width="match_parent"
		        	android:layout_height="wrap_content">

		            <CheckBox
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:layout_column="1"
				        android:text="@string/fees_on_top"
				        android:checked="true" />
		        </TableRow>
		    </TableLayout>
		            
		    <TableLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:stretchColumns="*" >
		        
		        <TableRow 
		            android:layout_width="match_parent"
		        	android:layout_height="wrap_content">
		            
				    <TextView 
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        
				        android:text="@string/recipient_will_receive"
				        />
				    
				    <TextView 
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:text="0,10 USD\n(~ 0,01 BTC)"
				        />
		        </TableRow>
		        
		        <TableRow 
		            android:layout_width="match_parent"
		        	android:layout_height="wrap_content">

					<TextView 
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:text="@string/deducted_from_your_account"
				        />		    		    
		            		            		            
					<TextView 
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:text="0,11 USD"
				        />		    		    
		        </TableRow>
			</TableLayout>
		</LinearLayout>
	</RelativeLayout>
</ScrollView>